...
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:padding="25dp"
                android:text="Cardiac Recorder"
                android:textColor="@color/deepRed"
                android:gravity="center_horizontal"
                android:textSize="36sp"

                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
...
